--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A small collection of useful array functions.",
   "author": "electricessence",
   "license": "MIT",
-  "types": "dist/index.d.ts",
-  "main": "dist/index.js",
-  "module": "dist-esm/index.js",
+  "types": "dist/arrayUtility.d.ts",
+  "main": "dist/arrayUtility.js",
+  "module": "dist-esm/arrayUtility.js",
   "keywords": [
     "array",
     "indexOf",
