--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "@tsdotnet/array-init": "^1.0.8",
     "@tsdotnet/compare": "^1.3.4",
     "@tsdotnet/exceptions": "^1.0.14",
-    "@tsdotnet/integer": "^1.0.8"
+    "@tsdotnet/integer": "^1.0.8",
+    "tslib": "^2.0.0"
   }
 }
