--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@tsdotnet/compare": "^1.3.12",
     "@tsdotnet/exceptions": "^1.0.15",
     "@tsdotnet/integer": "^1.0.10",
+    "@tsdotnet/type": "^1.0.7",
     "tslib": "^2.0.0"
   }
 }
