--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "copyTo"
   ],
   "scripts": {
-    "build:dist": "rimraf dist/* && copyfiles -u 1 src/**/*.d.ts dist && tsc",
+    "build:dist": "rimraf dist/* && tsc && copyfiles -u 1 src/**/*.d.ts dist",
     "build:dist-esm": "rimraf dist-esm/* && tsc -p tsconfig.esm.json",
     "build": "pnpm i && run-p build:*",
     "bump": "npm run precommit && npm version patch",
@@ -75,7 +75,7 @@
   "dependencies": {
     "@tsdotnet/array-copy": "^1.0.15",
     "@tsdotnet/array-init": "^1.0.11",
-    "@tsdotnet/compare": "^1.3.15",
+    "@tsdotnet/compare": "^1.3.16",
     "@tsdotnet/exceptions": "^1.0.17",
     "@tsdotnet/integer": "^1.0.12",
     "@tsdotnet/type": "^1.0.11",
