--- a/package.json
+++ b/package.json
@@ -96,7 +96,9 @@
       "minimist@>=1.0.0 <1.2.6": ">=1.2.6",
       "semver@<5.7.2": ">=5.7.2",
       "semver@>=6.0.0 <6.3.1": ">=6.3.1",
-      "semver@>=7.0.0 <7.5.2": ">=7.5.2"
+      "semver@>=7.0.0 <7.5.2": ">=7.5.2",
+      "get-func-name@<2.0.1": ">=2.0.1",
+      "@babel/traverse@<7.23.2": ">=7.23.2"
     }
   }
 }
