--- a/package.json
+++ b/package.json
@@ -4,9 +4,19 @@
   "description": "A small collection of useful array functions.",
   "author": "electricessence",
   "license": "MIT",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/arrayUtility.js",
+      "require": "./dist/cjs/arrayUtility.js",
+      "types": "./dist/arrayUtility.d.ts"
+    }
+  },
   "types": "dist/arrayUtility.d.ts",
-  "main": "dist/arrayUtility.js",
-  "module": "dist-esm/arrayUtility.js",
+  "main": "dist/cjs/arrayUtility.js",
+  "module": "dist/esm/arrayUtility.js",
+  "umd:main": "dist/umd/arrayUtility.js",
+  "unpkg": "dist/umd/arrayUtility.js",
+  "jsdelivr": "dist/umd/arrayUtility.js",
   "keywords": [
     "array",
     "indexOf",
@@ -30,17 +40,20 @@
     "copyTo"
   ],
   "scripts": {
-    "build:dist": "rimraf dist && tsc && copyfiles -u 1 src/**/*.d.ts dist",
-    "build:dist-esm": "rimraf dist-esm && tsc -p tsconfig.esm.json",
-    "build": "pnpm i && pnpm run build:dist && pnpm run build:dist-esm",
-    "bump": "npm run-script precommit && npm version patch",
+    "clean": "rimraf dist",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "build:umd": "tsc -p tsconfig.umd.json",
+    "build:types": "cpy \"src/**/*.d.ts\" dist --parents && tsc -p tsconfig.types.json",
+    "build": "pnpm i && pnpm run clean && concurrently \"pnpm:build:*\"",
+    "bump": "pnpm run precommit && pnpm version patch",
     "docs": "rimraf docs && typedoc --options typedoc.json --readme none",
     "lint": "eslint src/**/*.ts",
-    "precommit": "pnpm i && run-p lint test && run-p build:* && npm run-script validate && git status -s",
-    "prepublishOnly": "npm run-script build && run-p validate test",
-    "preversion": "run-p lint test",
-    "postversion": "git push && git push --tags && npm run-script docs && git commit -m \"Updated docs.\" docs && git push",
-    "test": "mocha -r ts-node/register tests/**/*.ts",
+    "precommit": "pnpm i && pnpm run build && pnpm run lint && pnpm run validate && pnpm run test && git status -s",
+    "prepublishOnly": "pnpm run build && pnpm run validate && pnpm run test",
+    "preversion": "pnpm run lint && pnpm run test",
+    "postversion": "git push && git push --tags && pnpm run docs && git add -A && git commit -m \"Updated docs.\" docs && git push",
+    "test": "tsx node_modules/mocha/bin/_mocha tests/**/*.ts",
     "validate": "node ./.build/validate-package.js"
   },
   "repository": {
@@ -52,35 +65,30 @@
   },
   "homepage": "https://github.com/tsdotnet/array-utility#readme",
   "devDependencies": {
+    "@eslint/js": "^9.33.0",
     "@tsdotnet/common-interfaces": "^1.0.4",
     "@types/chai": "^5.2.2",
     "@types/mocha": "^10.0.10",
     "@types/node": "^24.3.0",
-    "@typescript-eslint/eslint-plugin": "^8.39.1",
-    "@typescript-eslint/parser": "^8.39.1",
     "chai": "^5.2.1",
-    "copyfiles": "^2.4.1",
+    "concurrently": "^9.2.0",
+    "cpy-cli": "^6.0.0",
     "eslint": "^9.33.0",
-    "eslint-config-typescript": "^3.0.0",
-    "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^7.2.1",
     "mocha": "^11.7.1",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^17.1.0",
     "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typedoc": "^0.28.10",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.39.1"
   },
   "dependencies": {
-    "@tsdotnet/array-copy": "^1.0.16",
-    "@tsdotnet/array-init": "^1.0.11",
-    "@tsdotnet/compare": "^1.3.20",
-    "@tsdotnet/exceptions": "^1.0.18",
-    "@tsdotnet/integer": "^1.0.14",
-    "@tsdotnet/type": "^1.0.13",
-    "tslib": "^2.3.1"
+    "@tsdotnet/array-copy": "^1.2.1",
+    "@tsdotnet/array-init": "^1.2.1",
+    "@tsdotnet/compare": "^1.5.1",
+    "@tsdotnet/exceptions": "^1.2.2",
+    "@tsdotnet/integer": "^1.2.1",
+    "@tsdotnet/type": "^1.2.1",
+    "tslib": "^2.8.1"
   },
   "pnpm": {
     "overrides": {
