--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "description": "A small collection of useful array functions.",
   "author": "electricessence",
   "license": "MIT",
+  "type": "module",
   "exports": {
     ".": {
+      "types": "./dist/types/arrayUtility.d.ts",
       "import": "./dist/esm/arrayUtility.js",
-      "require": "./dist/cjs/arrayUtility.js",
-      "types": "./dist/arrayUtility.d.ts"
+      "require": "./dist/cjs/arrayUtility.js"
     }
   },
-  "types": "dist/arrayUtility.d.ts",
-  "main": "dist/cjs/arrayUtility.js",
-  "module": "dist/esm/arrayUtility.js",
-  "umd:main": "dist/umd/arrayUtility.js",
-  "unpkg": "dist/umd/arrayUtility.js",
-  "jsdelivr": "dist/umd/arrayUtility.js",
+  "types": "./dist/types/arrayUtility.d.ts",
   "keywords": [
     "array",
     "indexOf",
@@ -41,20 +37,19 @@
   ],
   "scripts": {
     "clean": "rimraf dist",
+    "build:types": "cpy \"src/**/*.d.ts\" dist/types --parents && tsc -p tsconfig.types.json",
+    "build:esm": "rollup -c rollup.config.js",
     "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "build:umd": "tsc -p tsconfig.umd.json",
-    "build:types": "cpy \"src/**/*.d.ts\" dist --parents && tsc -p tsconfig.types.json",
-    "build": "pnpm i && pnpm run clean && concurrently \"pnpm:build:*\"",
-    "bump": "pnpm run precommit && pnpm version patch",
-    "docs": "rimraf docs && typedoc --options typedoc.json --readme none",
+    "build": "pnpm clean && pnpm build:types && pnpm build:esm && pnpm build:cjs",
+    "test": "vitest run",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts",
-    "precommit": "pnpm i && pnpm run build && pnpm run lint && pnpm run validate && pnpm run test && git status -s",
-    "prepublishOnly": "pnpm run build && pnpm run validate && pnpm run test",
-    "preversion": "pnpm run lint && pnpm run test",
+    "docs": "rimraf docs && typedoc --options typedoc.json --readme none",
+    "bump": "pnpm run precommit && pnpm version patch",
+    "precommit": "pnpm build && pnpm test && pnpm lint && git status -s",
+    "preversion": "pnpm lint && pnpm test",
     "postversion": "git push && git push --tags && pnpm run docs && git add -A && git commit -m \"Updated docs.\" docs && git push",
-    "test": "tsx node_modules/mocha/bin/_mocha tests/**/*.ts",
-    "validate": "node ./.build/validate-package.js"
+    "prepublishOnly": "pnpm build && pnpm test && pnpm lint"
   },
   "repository": {
     "type": "git",
@@ -66,42 +61,37 @@
   "homepage": "https://github.com/tsdotnet/array-utility#readme",
   "devDependencies": {
     "@eslint/js": "^9.33.0",
-    "@tsdotnet/common-interfaces": "^1.0.4",
-    "@types/chai": "^5.2.2",
-    "@types/mocha": "^10.0.10",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/node": "^24.3.0",
-    "chai": "^5.2.1",
-    "concurrently": "^9.2.0",
     "cpy-cli": "^6.0.0",
     "eslint": "^9.33.0",
-    "mocha": "^11.7.1",
     "rimraf": "^6.0.1",
-    "tsx": "^4.20.4",
+    "rollup": "^4.46.3",
     "typedoc": "^0.28.10",
     "typescript": "^5.9.2",
-    "typescript-eslint": "^8.39.1"
+    "typescript-eslint": "^8.39.1",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@tsdotnet/array-copy": "^1.2.1",
-    "@tsdotnet/array-init": "^1.2.1",
-    "@tsdotnet/compare": "^1.5.1",
-    "@tsdotnet/exceptions": "^1.2.2",
-    "@tsdotnet/integer": "^1.2.1",
-    "@tsdotnet/type": "^1.2.1",
+    "@tsdotnet/array-init": "^1.2.2",
+    "@tsdotnet/common-interfaces": "^1.0.5",
+    "@tsdotnet/compare": "^1.5.4",
+    "@tsdotnet/exceptions": "^1.2.4",
+    "@tsdotnet/integer": "^1.2.3",
+    "@tsdotnet/type": "^1.2.4",
     "tslib": "^2.8.1"
   },
   "pnpm": {
     "overrides": {
-      "path-parse@<1.0.7": ">=1.0.7",
       "hosted-git-info@<2.8.9": ">=2.8.9",
       "y18n@=4.0.0": ">=4.0.1",
       "lodash@<4.17.20": ">=4.17.20",
       "shell-quote@<=1.7.2": ">=1.7.3",
       "lodash@<4.17.21": ">=4.17.21",
+      "json5@<1.0.2": ">=1.0.2",
       "json5@>=2.0.0 <2.2.2": ">=2.2.2",
       "minimatch@<3.0.5": ">=3.0.5",
-      "word-wrap@<1.2.4": ">=1.2.4",
-      "minimist@>=1.0.0 <1.2.6": ">=1.2.6",
       "semver@<5.7.2": ">=5.7.2",
       "semver@>=6.0.0 <6.3.1": ">=6.3.1",
       "semver@>=7.0.0 <7.5.2": ">=7.5.2",
@@ -109,7 +99,7 @@
       "@babel/traverse@<7.23.2": ">=7.23.2",
       "braces@<3.0.3": ">=3.0.3"
     },
-    "onlyBuiltDependencies": [
+    "ignoredBuiltDependencies": [
       "esbuild"
     ]
   }
